--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -37,4 +37,18 @@ jobs:
       with: 
         name: nome
         path: nomee.zip
-        
+  build-docker:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+    - uses: actions/checkout@v4
+    - name: Build docker image
+      run: docker build -t project:latest .
+    - name: Login to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+    - name: Publish image
+      run: |
+        docker push project:latest
